--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.application.name=demo
+spring.application.name=yms-spring
 spring.data.mongodb.uri=mongodb+srv://root:root@springboot-cluster.g2fam.mongodb.net/spring-db?retryWrites=true&w=majority&appName=springboot-cluster
